sdl-parser/src/snapshots/sdl_parser__tests__can_parse_minimal_sdl.snap
---
source: sdl-parser/src/lib.rs
expression: parsed_schema
---
scenario:
  name: test-scenario
  description: ~
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes: ~
  features: ~
  infrastructure: ~
  conditions: ~
  vulnerabilities: ~
  capabilities: ~
  metrics: ~
  evaluations: ~
  tlos: ~
  entities: ~

