sdl-parser/src/snapshots/sdl_parser__tests__includes_a_list_of_conditions.snap
---
source: sdl-parser/src/lib.rs
expression: nodes
---
scenario:
  name: test-scenario
  description: some-description
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes:
    deb10:
      type: VM
      description: deb-10-description
      resources:
        ram: 2147483648
        cpu: 1
      source:
        name: debian10
        version: "*"
      conditions:
        - condition-2
        - condition-3
    win10:
      type: VM
      description: win-10-description
      resources:
        ram: 4294967296
        cpu: 2
      source:
        name: windows10
        version: "*"
      conditions:
        - condition-1
  features: ~
  infrastructure:
    deb10:
      count: 1
      links: ~
      dependencies: ~
    win10:
      count: 1
      links: ~
      dependencies:
        - deb10
  conditions:
    condition-1:
      command: executable/path.sh
      interval: 30
      source: ~
    condition-2:
      command: ~
      interval: ~
      source:
        name: digital-library-package
        version: "*"
    condition-3:
      command: executable/path.sh
      interval: 30
      source: ~

