sdl-parser/src/snapshots/sdl_parser__tests__includes_nodes.snap
---
source: sdl-parser/src/lib.rs
expression: nodes
---
deb10:
  type: VM
  description: deb-10-description
  resources:
    ram: 2147483648
    cpu: 1
  source:
    name: debian10
    version: "*"
  conditions: ~
  vulnerabilities: ~
win10:
  type: VM
  description: win-10-description
  resources:
    ram: 4294967296
    cpu: 2
  source:
    name: windows10
    version: "*"
  conditions: ~
  vulnerabilities: ~

