sdl-parser/src/snapshots/sdl_parser__tests__parent_features_dependencies_are_built_correctly.snap
---
source: sdl-parser/src/lib.rs
expression: tranches
---
[
    [
        "grandchild-config",
        "child-config",
    ],
    [
        "child-config",
        "grandchild-artifact",
    ],
    [
        "child-service",
    ],
    [
        "parent-service",
    ],
]
