sdl-parser/src/snapshots/sdl_parser__tests__sdl_keys_are_valid_in_lowercase_uppercase_capitalized.snap
---
source: sdl-parser/src/lib.rs
expression: parsed_schema
---
scenario:
  name: test-scenario
  description: some-description
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes:
    Win10:
      type: VM
      description: win-10-description
      resources:
        ram: 4294967296
        cpu: 2
      source:
        name: windows10
        version: "*"
      conditions: ~
  features: ~
  infrastructure: ~
  conditions: ~

